# rust-sdk

./: .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  TODO.md  client-metadata.json  index.html  justfile  release-plz.toml  rust-toolchain.toml  typos.toml
bindings/python/: .gitignore  Cargo.toml  setup.py
bindings/python/examples/clients/src/: sse.py
bindings/python/rmcp_python/: __init__.py
bindings/python/src/: client.rs  lib.rs  service.rs  transport.rs  types.rs
bindings/python/src/model/: capabilities.rs  mod.rs  prompt.rs  prompt_message.rs  resource.rs  tool.rs
bindings/python/src/transport/: child_process.rs  io.rs  sse.rs  ws.rs
bindings/python/tests/: conftest.py  test_client.py
bindings/typescript/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
bindings/typescript/examples/clients/: package-lock.json  package.json  tsconfig.json
bindings/typescript/examples/clients/src/: sse.ts
bindings/typescript/rmcp_typescript/: index.ts
bindings/typescript/src/: client.rs  lib.rs  model.rs  service.rs  transport.rs
bindings/typescript/src/model/: capabilities.rs  prompt.rs  prompt_message.rs  resource.rs  tool.rs
bindings/typescript/src/transport/: sse.rs
bindings/typescript/tests/: add.test.ts
crates/mcp-macros/: Cargo.toml
crates/mcp-macros/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/examples/: tokio_std_io.rs  wasi_std_io.rs
crates/mcp-server/examples/common/: counter.rs  mod.rs
crates/mcp-server/examples/sse-axim/: counter.rs
crates/mcp-server/examples/sse-axum/: main.rs
crates/mcp-server/src/: lib.rs  router.rs  toolset.rs
crates/mcp-server/src/transport/: mod.rs  stdio.rs
crates/rmcp/: CHANGELOG.md  Cargo.toml  README.md
crates/rmcp-core/: Cargo.toml
crates/rmcp-core/src/: lib.rs  model.rs
crates/rmcp-core/src/model/: capabilities.rs  extension.rs
crates/rmcp/src/: error.rs  handler.rs  lib.rs  model.rs  service.rs  task_manager.rs  transport.rs  util.rs
crates/rmcp/src/handler/: client.rs  macros.rs  server.rs
crates/rmcp/src/handler/client/: progress.rs
crates/rmcp/src/handler/server/: common.rs  completion.rs  prompt.rs  router.rs  tool.rs  tool_name_validation.rs
crates/rmcp/src/model/: annotated.rs  capabilities.rs  content.rs  elicitation_schema.rs  extension.rs  meta.rs  mrtr.rs  prompt.rs  request_state.rs  resource.rs  serde_impl.rs  task.rs  tool.rs
crates/rmcp/src/service/: client.rs  server.rs  tower.rs
crates/rmcp/src/transport/: async_rw.rs  auth.rs  auth_server.rs  child_process.rs  child_process2.rs  common.rs  sink_stream.rs  sse.rs  sse_auth.rs  sse_client.rs  sse_server.rs  streamable_http_client.rs  streamable_http_server.rs  worker.rs
crates/rmcp/src/transport/child_process/: builder.rs  runner.rs  tokio.rs  transport.rs
crates/rmcp/src/transport/child_process2/: builder.rs  runner.rs  tokio.rs  transport.rs
crates/rmcp/src/transport/common/: client_side_sse.rs  http_header.rs  mcp_headers.rs  reqwest.rs  server_side_http.rs  sse.rs  unix_socket.rs
crates/rmcp/src/transport/sse_server/: axum.rs  (+5 more)
crates/rmcp/tests/: test_cache_hints.rs  test_client_credentials.rs  test_client_initialization.rs  test_close_connection.rs  test_completion.rs  test_complex_schema.rs  test_custom_headers.rs  test_custom_request.rs  test_deserialization.rs  test_elicitation.rs  test_embedded_resource_meta.rs  test_handler_wrappers.rs  test_inflight_response_drain.rs  test_json_schema_detection.rs  test_list_tools_result.rs  test_logging.rs  test_message_protocol.rs  test_meta_field.rs  test_meta_helpers.rs  test_mrtr_behavior.rs  test_notification.rs  test_progress_subscriber.rs  test_prompt_handler.rs  test_prompt_macro_annotations.rs  test_prompt_macros.rs  test_prompt_routers.rs  test_prompts.rs  test_protocol_version_negotiation.rs  test_request_timeout_progress.rs  test_resource_link.rs  test_resource_link_integration.rs  test_resource_not_found_version.rs  test_result_type_wire.rs  test_sampling.rs  test_server_initialization.rs  test_sse_channel_replacement_bug.rs  test_sse_concurrent_streams.rs  test_sse_server.rs  test_stateless_protocol_version.rs  test_stdio_response_concurrency.rs  (+22 more)
crates/rmcp/tests/common/: calculator.rs  handlers.rs
crates/rmcp/tests/fixtures/: test_rsa_key.pem
crates/rmcp/tests/test_list_tools_result/: list_tools_result.json
crates/rmcp/tests/test_message_schema/: client_json_rpc_message_schema.json  client_json_rpc_message_schema_current.json  server_json_rpc_message_schema.json  server_json_rpc_message_schema_current.json
crates/rmcp/tests/test_with_js/: server.js  streamable_client.js  streamable_server.js
examples/servers/: Cargo.toml  README.md  file_operations_stdio.rs
examples/servers/src/: actix_web.rs  axum.rs  axum_router.rs  calculator_stdio.rs  cimd_auth_streamhttp.rs  completion_stdio.rs  complex_auth_sse.rs  complex_auth_streamhttp.rs  counter_hyper_streamable_http.rs  counter_server.rs  counter_sse.rs  counter_sse_actix.rs  counter_stdio.rs  counter_streamable_http_actix.rs  counter_streamhttp.rs  elicitation_enum_inference.rs  elicitation_stdio.rs  mrtr.rs  poem.rs  progress_demo.rs  progress_demo_test.rs  prompt_stdio.rs  sampling_stdio.rs  simple_auth_sse.rs  simple_auth_streamhttp.rs  strict_output_validation.rs  structured_output.rs  task_stdio.rs  third_party_auth_server.rs
examples/servers/src/common/: calculator.rs  counter.rs  extractor.rs  generic_service.rs  mod.rs  progress_demo.rs  task_demo.rs
examples/transport/: Cargo.toml
examples/transport/src/: http_upgrade.rs  named-pipe.rs  tcp.rs  unix_socket.rs  websocket.rs
examples/transport/src/common/: calculator.rs
examples/wasi/: Cargo.toml
examples/wasi/src/: calculator.rs  lib.rs
shiitake_uranai_mcp/: Cargo.toml
shiitake_uranai_mcp/src/: main.rs
shiitake_uranai_mcp/src/server/: mod.rs  shiitake_uranai_mcp_server.rs
shiitake_uranai_mcp/src/shiitake_domain/: constellation_validator.rs  mod.rs  scraper.rs
shiitake_uranai_mcp/src/shiitake_scraper/: mod.rs  shiitake_uranai_scraper.rs
(+98 files in other folders)
