[workspace]
members = ["crates/rmcp", "crates/rmcp-macros", "examples/*"]
resolver = "2"

[workspace.dependencies]
rmcp = { version = "0.1.5", path = "./crates/rmcp" }
rmcp-macros = { version = "0.1.5", path = "./crates/rmcp-macros" }

[workspace.package]
edition = "2024"
version = "0.1.5"
authors = ["4t145 <u4t145@163.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/modelcontextprotocol/rust-sdk/"
description = "Rust SDK for Model Context Protocol"
keywords = ["mcp", "modelcontextprotocol", "sdk", "tokio"]
homepage = "https://github.com/modelcontextprotocol/rust-sdk"
categories = ["asynchronous", "network-programming"]
readme = "README.md"
