[package]
name = "shiitake_uranai_mcp"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
chrono = "0.4.40"
chrono-tz = "0.10.3"
mcp-server = { path = "../crates/mcp-server" }
mcp-core = { path = "../crates/mcp-core" }
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0.97"
serde_json = "1.0.140"

[[example]]
name = "shiitake-uranai-mcp"
path = "src/main.rs"