[package]
name = "rmcp-python"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Python bindings for the RMCP Rust SDK"
license = "MIT"
repository = "https://github.com/yourusername/rust-sdk"

[lib]
name = "rmcp_python"
crate-type = ["cdylib"]

[dependencies]
rmcp = { path = "../../crates/rmcp", features = ["transport-sse", "transport-child-process", "client"] }
pyo3 = { version = "0.20.3", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"

[build-dependencies]
pyo3-build-config = "0.20.0"

[features]
default = ["pyo3"]
pyo3 = []