[package]
name = "rmcp_typescript"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
rmcp = { path = "../../crates/rmcp", features = ["transport-sse", "client"] }
napi = { version = "2", features = ["serde-json", "tokio_rt"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sse-stream = "0.1.3"
url = "2.4"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2"
