[package]
name = "mcp-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp-core = { path = "../mcp-core" }
schemars = "0.8"
convert_case = "0.6.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
schemars = "0.8"
